# hikari-utils

./: .gitignore  LICENSE  README.md  pyproject.toml
hikariutils/: __init__.py  constants.py  convert.py  errors.py  getfetch.py  parse.py  perms.py  regex.py
