[project]
name = "hikari-utils"
version = "0.2.0"
description = "A random assortment of utilities for the hikari Discord API wrapper."
authors = [{name = "Etorix", email = "admin@etorix.dev"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "dateparser>=1.2.1",
    "emoji>=2.14.1",
    "hikari>=2.3.0",
    "regex>=2024.11.6",
    "whenever>=0.7.3",
]

[dependency-groups]
dev = [
    "ruff>=0.11.7",
]

[tool.ruff]
line-length = 320