[project]
name = "hikari-utils"
version = "0.2.0"
description = "A random assortment of utilities for the hikari Discord API wrapper."
authors = [{name = "Etorix", email = "admin@etorix.dev"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "dateparser",
    "emoji>=2.14.1",
    "hikari>=2.3.2",
    "regex>=2024.11.6",
    "whenever>=0.8.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.9",
]

[tool.ruff]
line-length = 320

[tool.uv.sources]
dateparser = { git = "https://github.com/EtorixDev/dateparser" }
