[project]
name = "hikari-utils"
version = "0.3.1"
description = "An untested, overly verbose, random assortment of utilities for the hikari Discord API wrapper."
authors = [{name = "Etorix", email = "admin@etorix.dev"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "dateparser",
    "emoji>=2.14.1",
    "hikari>=2.3.3",
    "regex>=2024.11.6",
    "whenever>=0.8.3",
]

[dependency-groups]
dev = [
    "ruff>=0.11.11",
]

[tool.ruff]
line-length = 320

[tool.uv.sources]
dateparser = { git = "https://github.com/EtorixDev/dateparser" }
